# winio-example

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: android.yaml  build.yaml  linux-glibc.yaml  macos.yaml  windows-10.yaml  windows.yaml
android/: settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/java/: MainActivity.java
android/gradle/: libs.versions.toml
src/: android.rs
