[package]
name = "winio-example"
version = "0.1.0"
edition = "2024"

[lib]
name = "main"

[[bin]]
path = "src/main.rs"
name = "app"

[dependencies]
winio = { version = "0.12.0-rc.7", features = [
    "win32",
    "qt",
    "windows-dark-mode",
], default-features = false }
compio = { version = "0.19", default-features = true, features = [
    "time",
    "rustls",
    "ring",
] }
compio-log = { version = "0.2" }
cyper = { version = "0.9.0", default-features = false, features = [
    "rustls",
    "http2",
    "http3-altsvc",
] }
cyper-axum = "0.9.0"
axum = { version = "0.8", default-features = false }

anyhow = "1"
bytemuck = { version = "1", optional = true, features = ["derive"] }
cgmath = { version = "0.18", optional = true }
dirs = "6.0"
itertools = "0.15"
pulldown-cmark = "0.13"
tracing-subscriber = "0.3"
url = "2"

local-sync = "0.1"
cfg-if = "1"
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = [
    "default-formats",
] }
inherit-methods-macro = "0.1"

plotters = { version = "0.3", default-features = false, features = [
    "line_series",
] }
plotters-backend = { version = "0.3", optional = true }

send_wrapper = { version = "0.6", features = ["futures"] }
wgpu = { version = "29", default-features = false, optional = true, features = [
    "wgsl",
] }

[target.'cfg(target_os = "android")'.dependencies]
tracing_android_trace = "0.1.0"

jni = "0.22"
rustls-platform-verifier = "0.7.0"

[features]
default = ["enable_log", "all"]
enable_log = ["winio/enable_log", "compio-log/enable_log"]

media = ["winio/media"]
webview = ["winio/webview"]
compio-compat = ["winio/compio-compat"]
wgpu = ["winio/wgpu", "dep:wgpu", "dep:bytemuck", "dep:cgmath"]
all = ["media", "webview", "plotters", "wgpu", "compio-compat"]

# Canvas example
plotters = ["winio/plotters", "dep:plotters-backend"]

nightly = [
    "winio/nightly",
    "compio/nightly",
    "cyper/nightly",
    "cyper-axum/nightly",
]

[package.metadata.bundle]
name = "Widgets"
identifier = "rs.compio.winio.widgets"
